--- a/pre-section/Section 0.ipynb
+++ b/pre-section/Section 0.ipynb
@@ -2,7 +2,9 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "1L9jDm9oxIw4"
+      },
       "source": [
         "# Colab + Python: Quick Intro for DPI-681 Breakout Sections\n",
         "\n",
@@ -10,7 +12,7 @@
         "\n",
         "**What you will do**\n",
         "1. Learn how to run and edit cells.\n",
-        "2. Get your section password. \n",
+        "2. Get your section password.\n",
         "\n",
         "\n",
         "\n",
@@ -20,11 +22,14 @@
         "\n",
         "3. Practice basic Python with a small quiz.\n",
         "4. Do two short interactive exercises to check your skills.\n"
-      ]
+      ],
+      "id": "1L9jDm9oxIw4"
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "C07zTgckxIw5"
+      },
       "source": [
         "## How to use Colab\n",
         "- Run a cell with **Shift+Enter**.\n",
@@ -32,20 +37,27 @@
         "- If Python gets into a bad state, use **Runtime → Restart runtime**.\n",
         "- To see help for a function, run `help(function_name)`.\n",
         "- Print things with `print(...)` to inspect values quickly."
-      ]
+      ],
+      "id": "C07zTgckxIw5"
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "Cdz-ZFCOxIw5"
+      },
       "source": [
         "## 0) Run the setup and get your section password!"
-      ]
+      ],
+      "id": "Cdz-ZFCOxIw5"
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "id": "a769c3d0",
-      "metadata": {},
+      "metadata": {
+        "cellView": "form",
+        "id": "a769c3d0"
+      },
       "outputs": [],
       "source": [
         "#@title Setup\n",
@@ -74,7 +86,10 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "cellView": "form",
+        "id": "VF97TGsZxIw5"
+      },
       "outputs": [],
       "source": [
         "#@title Setup Check\n",
@@ -82,17 +97,20 @@
         "    print('Setup looks complete. You are good to go.')\n",
         "else:\n",
         "    print('Note: I do not see SETUP_COMPLETE == True. If your setup block uses a different signal, you can ignore this.')"
-      ]
+      ],
+      "id": "VF97TGsZxIw5"
     },
     {
       "cell_type": "markdown",
       "id": "1aeff2bb",
-      "metadata": {},
+      "metadata": {
+        "id": "1aeff2bb"
+      },
       "source": [
-        "## Please confirm you see \n",
-        "> Setup looks complete. You are good to go. \n",
+        "## Please confirm you see\n",
+        "> Setup looks complete. You are good to go.\n",
         "\n",
-        "In the notebook before continuing! \n",
+        "In the notebook before continuing!\n",
         "\n",
         "In the setup, we have defined a variable called `password`. Add a new code cell below this block (click \"+ Code\" in the toolbar), and call the `print(...)` function on the variable password. If you're confused, refer to the Python Basics section below."
       ]
@@ -100,23 +118,30 @@
     {
       "cell_type": "markdown",
       "id": "39525f70",
-      "metadata": {},
+      "metadata": {
+        "id": "39525f70"
+      },
       "source": [
         "# Optional Sections. Useful if you're less familiar with Python!"
       ]
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "sjs4BAY3xIw6"
+      },
       "source": [
         "## 1) Python basics\n",
-        "A few quick reminders. Feel free to edit and re-run these cells to see what changes."
-      ]
+        "A few quick reminders. Feel free to edit and re-run these cells to see what changes. You can also ask Gemini (icon on the bottom of the notebook) to explain what things are doing! Just highlight a block and ask \"What is happening in this block?\"\n"
+      ],
+      "id": "sjs4BAY3xIw6"
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "GfbG363exIw7"
+      },
       "outputs": [],
       "source": [
         "# Variables and types\n",
@@ -129,12 +154,15 @@
         "print(type(y))          # type of a value\n",
         "print(name.upper())     # string method\n",
         "print(is_ready and (x > 1))"
-      ]
+      ],
+      "id": "GfbG363exIw7"
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "YtBLLOzPxIw7"
+      },
       "outputs": [],
       "source": [
         "# Lists and dictionaries\n",
@@ -147,12 +175,15 @@
         "info['instructor'] = 'You'\n",
         "print(nums)\n",
         "print(info)"
-      ]
+      ],
+      "id": "YtBLLOzPxIw7"
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "tVRtBdZdxIw7"
+      },
       "outputs": [],
       "source": [
         "# Control flow and functions\n",
@@ -164,20 +195,26 @@
         "\n",
         "for n in range(1, 6):\n",
         "    print(describe_number(n))"
-      ]
+      ],
+      "id": "tVRtBdZdxIw7"
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "JP9hKzQyxIw7"
+      },
       "source": [
         "## 2) Quick quiz\n",
         "Answer two short questions. You will get feedback as soon as you click **Check**."
-      ]
+      ],
+      "id": "JP9hKzQyxIw7"
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "Hsa1ZJp5xIw8"
+      },
       "outputs": [],
       "source": [
         "from ipywidgets import RadioButtons, Button, VBox, HTML\n",
@@ -215,22 +252,28 @@
         "\n",
         "check_btn.on_click(check_answers)\n",
         "display(VBox([q1, q2, check_btn, feedback]))"
-      ]
+      ],
+      "id": "Hsa1ZJp5xIw8"
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "rwCbeZbYxIw8"
+      },
       "source": [
         "## 3) Exercise 1: Mini calculator (interactive)\n",
         "Build intuition for variables, input, and basic operations. Change the values and operator to see the result update.\n",
         "\n",
         "**Task:** Read the code. Predict the result before running. Then run and try different inputs.\n"
-      ]
+      ],
+      "id": "rwCbeZbYxIw8"
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "Lq-vFnCDxIw8"
+      },
       "outputs": [],
       "source": [
         "from ipywidgets import FloatText, Dropdown, Output, HBox, VBox, Label\n",
@@ -265,11 +308,14 @@
         "\n",
         "display(VBox([HBox([a_in, b_in, op_in]), out]))\n",
         "compute()"
-      ]
+      ],
+      "id": "Lq-vFnCDxIw8"
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "9rtTGV_hxIw8"
+      },
       "source": [
         "## 4) Exercise 2: Write a function and pass the tests\n",
         "**Goal:** Write a function that **returns a new list** containing the squares of the even integers from the input.\n",
@@ -285,7 +331,8 @@
         "- `square_evens([0, 2.0, 5, -6])` → `[0, 36]` (2.0 is not an int)\n",
         "\n",
         "Write your function in the next cell. Then run the tests."
-      ]
+      ],
+      "id": "9rtTGV_hxIw8"
     },
     {
       "cell_type": "code",
@@ -305,12 +352,15 @@
         "        if isinstance(x, int) and x % 2 == 0:\n",
         "            result.append(x * x)\n",
         "    return result"
-      ]
+      ],
+      "id": "student_fn"
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "9Sq9dnDBxIw8"
+      },
       "outputs": [],
       "source": [
         "# Tests. Read them to understand expected behavior.\n",
@@ -327,12 +377,15 @@
         "check_equal(square_evens([]), [], 'empty list')\n",
         "check_equal(square_evens([7, 9, 11]), [], 'no evens')\n",
         "check_equal(square_evens([10, 8, 6, 4, 2]), [100, 64, 36, 16, 4], 'order kept')"
-      ]
+      ],
+      "id": "9Sq9dnDBxIw8"
     },
     {
       "cell_type": "markdown",
       "id": "65750e11",
-      "metadata": {},
+      "metadata": {
+        "id": "65750e11"
+      },
       "source": [
         "## Wrap up\n",
         "- You ran a setup block.\n",
