--- a/pre-section/Section 0.ipynb
+++ b/pre-section/Section 0.ipynb
@@ -3,7 +3,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "1L9jDm9oxIw4"
+        "id": "vlhVuU3myI4O"
       },
       "source": [
         "# Colab + Python: Quick Intro for DPI-681 Breakout Sections\n",
@@ -23,12 +23,12 @@
         "3. Practice basic Python with a small quiz.\n",
         "4. Do two short interactive exercises to check your skills.\n"
       ],
-      "id": "1L9jDm9oxIw4"
+      "id": "vlhVuU3myI4O"
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "C07zTgckxIw5"
+        "id": "kGpJmdXfyI4P"
       },
       "source": [
         "## How to use Colab\n",
@@ -38,24 +38,23 @@
         "- To see help for a function, run `help(function_name)`.\n",
         "- Print things with `print(...)` to inspect values quickly."
       ],
-      "id": "C07zTgckxIw5"
+      "id": "kGpJmdXfyI4P"
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Cdz-ZFCOxIw5"
+        "id": "gHKKgnwLyI4Q"
       },
       "source": [
         "## 0) Run the setup and get your section password!"
       ],
-      "id": "Cdz-ZFCOxIw5"
+      "id": "gHKKgnwLyI4Q"
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 7,
       "id": "a769c3d0",
       "metadata": {
-        "cellView": "form",
         "id": "a769c3d0"
       },
       "outputs": [],
@@ -85,12 +84,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
-        "cellView": "form",
-        "id": "VF97TGsZxIw5"
+        "id": "Ww-iE1AyyI4Q",
+        "outputId": "b2f184f7-beea-4d76-c2cb-112eab0fb3db",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Setup looks complete. You are good to go.\n"
+          ]
+        }
+      ],
       "source": [
         "#@title Setup Check\n",
         "if 'SETUP_COMPLETE' in globals() and SETUP_COMPLETE is True:\n",
@@ -98,7 +108,7 @@
         "else:\n",
         "    print('Note: I do not see SETUP_COMPLETE == True. If your setup block uses a different signal, you can ignore this.')"
       ],
-      "id": "VF97TGsZxIw5"
+      "id": "Ww-iE1AyyI4Q"
     },
     {
       "cell_type": "markdown",
@@ -116,6 +126,18 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "### add your print function here..."
+      ],
+      "metadata": {
+        "id": "UDB-nlETyOPK"
+      },
+      "id": "UDB-nlETyOPK",
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "id": "39525f70",
       "metadata": {
@@ -128,19 +150,19 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "sjs4BAY3xIw6"
+        "id": "hT2VV9N5yI4R"
       },
       "source": [
         "## 1) Python basics\n",
-        "A few quick reminders. Feel free to edit and re-run these cells to see what changes. You can also ask Gemini (icon on the bottom of the notebook) to explain what things are doing! Just highlight a block and ask \"What is happening in this block?\"\n"
+        "A few quick reminders. Feel free to edit and re-run these cells to see what changes."
       ],
-      "id": "sjs4BAY3xIw6"
+      "id": "hT2VV9N5yI4R"
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "GfbG363exIw7"
+        "id": "VDIPzYfhyI4R"
       },
       "outputs": [],
       "source": [
@@ -155,13 +177,13 @@
         "print(name.upper())     # string method\n",
         "print(is_ready and (x > 1))"
       ],
-      "id": "GfbG363exIw7"
+      "id": "VDIPzYfhyI4R"
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "YtBLLOzPxIw7"
+        "id": "Qc_b63m8yI4R"
       },
       "outputs": [],
       "source": [
@@ -176,13 +198,13 @@
         "print(nums)\n",
         "print(info)"
       ],
-      "id": "YtBLLOzPxIw7"
+      "id": "Qc_b63m8yI4R"
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "tVRtBdZdxIw7"
+        "id": "VJlWzGZwyI4R"
       },
       "outputs": [],
       "source": [
@@ -196,24 +218,24 @@
         "for n in range(1, 6):\n",
         "    print(describe_number(n))"
       ],
-      "id": "tVRtBdZdxIw7"
+      "id": "VJlWzGZwyI4R"
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "JP9hKzQyxIw7"
+        "id": "VeK8IogvyI4R"
       },
       "source": [
         "## 2) Quick quiz\n",
         "Answer two short questions. You will get feedback as soon as you click **Check**."
       ],
-      "id": "JP9hKzQyxIw7"
+      "id": "VeK8IogvyI4R"
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "Hsa1ZJp5xIw8"
+        "id": "LsNnTkGUyI4R"
       },
       "outputs": [],
       "source": [
@@ -253,12 +275,12 @@
         "check_btn.on_click(check_answers)\n",
         "display(VBox([q1, q2, check_btn, feedback]))"
       ],
-      "id": "Hsa1ZJp5xIw8"
+      "id": "LsNnTkGUyI4R"
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "rwCbeZbYxIw8"
+        "id": "NATBez3CyI4S"
       },
       "source": [
         "## 3) Exercise 1: Mini calculator (interactive)\n",
@@ -266,13 +288,13 @@
         "\n",
         "**Task:** Read the code. Predict the result before running. Then run and try different inputs.\n"
       ],
-      "id": "rwCbeZbYxIw8"
+      "id": "NATBez3CyI4S"
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "Lq-vFnCDxIw8"
+        "id": "6LkzYM-FyI4S"
       },
       "outputs": [],
       "source": [
@@ -309,12 +331,12 @@
         "display(VBox([HBox([a_in, b_in, op_in]), out]))\n",
         "compute()"
       ],
-      "id": "Lq-vFnCDxIw8"
+      "id": "6LkzYM-FyI4S"
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "9rtTGV_hxIw8"
+        "id": "yF3wsWbPyI4S"
       },
       "source": [
         "## 4) Exercise 2: Write a function and pass the tests\n",
@@ -332,7 +354,7 @@
         "\n",
         "Write your function in the next cell. Then run the tests."
       ],
-      "id": "9rtTGV_hxIw8"
+      "id": "yF3wsWbPyI4S"
     },
     {
       "cell_type": "code",
@@ -359,7 +381,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "9Sq9dnDBxIw8"
+        "id": "QylSVYgRyI4S"
       },
       "outputs": [],
       "source": [
@@ -378,7 +400,7 @@
         "check_equal(square_evens([7, 9, 11]), [], 'no evens')\n",
         "check_equal(square_evens([10, 8, 6, 4, 2]), [100, 64, 36, 16, 4], 'order kept')"
       ],
-      "id": "9Sq9dnDBxIw8"
+      "id": "QylSVYgRyI4S"
     },
     {
       "cell_type": "markdown",
