Reduce time on pre-section

--- a/pre-section/Section 0.ipynb
+++ b/pre-section/Section 0.ipynb
@@ -3,7 +3,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "vlhVuU3myI4O"
+        "id": "1L9jDm9oxIw4"
       },
       "source": [
         "# Colab + Python: Quick Intro for DPI-681 Breakout Sections\n",
@@ -23,12 +23,12 @@
         "3. Practice basic Python with a small quiz.\n",
         "4. Do two short interactive exercises to check your skills.\n"
       ],
-      "id": "vlhVuU3myI4O"
+      "id": "1L9jDm9oxIw4"
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "kGpJmdXfyI4P"
+        "id": "C07zTgckxIw5"
       },
       "source": [
         "## How to use Colab\n",
@@ -38,23 +38,24 @@
         "- To see help for a function, run `help(function_name)`.\n",
         "- Print things with `print(...)` to inspect values quickly."
       ],
-      "id": "kGpJmdXfyI4P"
+      "id": "C07zTgckxIw5"
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "gHKKgnwLyI4Q"
+        "id": "Cdz-ZFCOxIw5"
       },
       "source": [
         "## 0) Run the setup and get your section password!"
       ],
-      "id": "gHKKgnwLyI4Q"
+      "id": "Cdz-ZFCOxIw5"
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 3,
       "id": "a769c3d0",
       "metadata": {
+        "cellView": "form",
         "id": "a769c3d0"
       },
       "outputs": [],
@@ -84,23 +85,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
-        "id": "Ww-iE1AyyI4Q",
-        "outputId": "b2f184f7-beea-4d76-c2cb-112eab0fb3db",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "cellView": "form",
+        "id": "VF97TGsZxIw5"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Setup looks complete. You are good to go.\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "#@title Setup Check\n",
         "if 'SETUP_COMPLETE' in globals() and SETUP_COMPLETE is True:\n",
@@ -108,7 +98,7 @@
         "else:\n",
         "    print('Note: I do not see SETUP_COMPLETE == True. If your setup block uses a different signal, you can ignore this.')"
       ],
-      "id": "Ww-iE1AyyI4Q"
+      "id": "VF97TGsZxIw5"
     },
     {
       "cell_type": "markdown",
@@ -126,43 +116,37 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [
-        "### add your print function here..."
-      ],
-      "metadata": {
-        "id": "UDB-nlETyOPK"
-      },
-      "id": "UDB-nlETyOPK",
-      "execution_count": 9,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "id": "39525f70",
       "metadata": {
         "id": "39525f70"
       },
       "source": [
-        "# Optional Sections. Useful if you're less familiar with Python!"
+        "\n",
+        "\n",
+        "```\n",
+        "# This is formatted as code\n",
+        "```\n",
+        "\n",
+        "# Optional Basics. Useful if you're less familiar with Python!"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "hT2VV9N5yI4R"
+        "id": "sjs4BAY3xIw6"
       },
       "source": [
         "## 1) Python basics\n",
-        "A few quick reminders. Feel free to edit and re-run these cells to see what changes."
+        "A few quick reminders. Feel free to edit and re-run these cells to see what changes. You can also ask Gemini (icon on the bottom of the notebook) to explain what things are doing! Click on the three dots in the top right of the block you are confused about and select \"Explain Code\"\n"
       ],
-      "id": "hT2VV9N5yI4R"
+      "id": "sjs4BAY3xIw6"
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "VDIPzYfhyI4R"
+        "id": "GfbG363exIw7"
       },
       "outputs": [],
       "source": [
@@ -177,13 +161,13 @@
         "print(name.upper())     # string method\n",
         "print(is_ready and (x > 1))"
       ],
-      "id": "VDIPzYfhyI4R"
+      "id": "GfbG363exIw7"
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "Qc_b63m8yI4R"
+        "id": "YtBLLOzPxIw7"
       },
       "outputs": [],
       "source": [
@@ -198,13 +182,13 @@
         "print(nums)\n",
         "print(info)"
       ],
-      "id": "Qc_b63m8yI4R"
+      "id": "YtBLLOzPxIw7"
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "VJlWzGZwyI4R"
+        "id": "tVRtBdZdxIw7"
       },
       "outputs": [],
       "source": [
@@ -218,189 +202,7 @@
         "for n in range(1, 6):\n",
         "    print(describe_number(n))"
       ],
-      "id": "VJlWzGZwyI4R"
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "VeK8IogvyI4R"
-      },
-      "source": [
-        "## 2) Quick quiz\n",
-        "Answer two short questions. You will get feedback as soon as you click **Check**."
-      ],
-      "id": "VeK8IogvyI4R"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "LsNnTkGUyI4R"
-      },
-      "outputs": [],
-      "source": [
-        "from ipywidgets import RadioButtons, Button, VBox, HTML\n",
-        "from IPython.display import display, clear_output\n",
-        "\n",
-        "# Q1\n",
-        "q1 = RadioButtons(\n",
-        "    options=['int', 'float', 'str', 'bool'],\n",
-        "    description='Type of 3/2:',\n",
-        "    value=None\n",
-        ")\n",
-        "\n",
-        "# Q2\n",
-        "q2 = RadioButtons(\n",
-        "    options=['a[7:]', 'a[-3:]', 'a[0:3]', 'a[:3]'],\n",
-        "    description='Last 3 of a:',\n",
-        "    value=None\n",
-        ")\n",
-        "\n",
-        "feedback = HTML()\n",
-        "check_btn = Button(description='Check', button_style='')\n",
-        "\n",
-        "def check_answers(_):\n",
-        "    correct1 = (q1.value == 'float')\n",
-        "    correct2 = (q2.value == 'a[-3:]')\n",
-        "    if correct1 and correct2:\n",
-        "        feedback.value = '<b>All correct.</b> Nice. Move on to the exercises.'\n",
-        "    else:\n",
-        "        msg = []\n",
-        "        if not correct1:\n",
-        "            msg.append('Q1: 3/2 is a float in Python 3.')\n",
-        "        if not correct2:\n",
-        "            msg.append(\"Q2: The last three items of list a are a[-3:].\")\n",
-        "        feedback.value = '<br>'.join(msg)\n",
-        "\n",
-        "check_btn.on_click(check_answers)\n",
-        "display(VBox([q1, q2, check_btn, feedback]))"
-      ],
-      "id": "LsNnTkGUyI4R"
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "NATBez3CyI4S"
-      },
-      "source": [
-        "## 3) Exercise 1: Mini calculator (interactive)\n",
-        "Build intuition for variables, input, and basic operations. Change the values and operator to see the result update.\n",
-        "\n",
-        "**Task:** Read the code. Predict the result before running. Then run and try different inputs.\n"
-      ],
-      "id": "NATBez3CyI4S"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "6LkzYM-FyI4S"
-      },
-      "outputs": [],
-      "source": [
-        "from ipywidgets import FloatText, Dropdown, Output, HBox, VBox, Label\n",
-        "from IPython.display import display\n",
-        "\n",
-        "a_in = FloatText(value=3.0, description='a:')\n",
-        "b_in = FloatText(value=2.0, description='b:')\n",
-        "op_in = Dropdown(options=['+', '-', '*', '/'], value='+', description='op:')\n",
-        "out = Output()\n",
-        "\n",
-        "def compute(*_):\n",
-        "    a, b, op = a_in.value, b_in.value, op_in.value\n",
-        "    try:\n",
-        "        if op == '+':\n",
-        "            result = a + b\n",
-        "        elif op == '-':\n",
-        "            result = a - b\n",
-        "        elif op == '*':\n",
-        "            result = a * b\n",
-        "        elif op == '/':\n",
-        "            result = a / b\n",
-        "        else:\n",
-        "            result = 'Unknown op'\n",
-        "    except ZeroDivisionError:\n",
-        "        result = 'Error: division by zero'\n",
-        "    with out:\n",
-        "        out.clear_output()\n",
-        "        print('Result:', result, '| Type:', type(result).__name__)\n",
-        "\n",
-        "for w in (a_in, b_in, op_in):\n",
-        "    w.observe(compute, names='value')\n",
-        "\n",
-        "display(VBox([HBox([a_in, b_in, op_in]), out]))\n",
-        "compute()"
-      ],
-      "id": "6LkzYM-FyI4S"
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "yF3wsWbPyI4S"
-      },
-      "source": [
-        "## 4) Exercise 2: Write a function and pass the tests\n",
-        "**Goal:** Write a function that **returns a new list** containing the squares of the even integers from the input.\n",
-        "\n",
-        "**Spec**\n",
-        "- Name: `square_evens`\n",
-        "- Input: `nums` (list of numbers)\n",
-        "- Output: a list of squares for the even integers in `nums`, in their original order\n",
-        "- Ignore non-integer values\n",
-        "\n",
-        "**Examples**\n",
-        "- `square_evens([1, 2, 3, 4])` → `[4, 16]`\n",
-        "- `square_evens([0, 2.0, 5, -6])` → `[0, 36]` (2.0 is not an int)\n",
-        "\n",
-        "Write your function in the next cell. Then run the tests."
-      ],
-      "id": "yF3wsWbPyI4S"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "student_fn"
-      },
-      "outputs": [],
-      "source": [
-        "def square_evens(nums):\n",
-        "    \"\"\"Return a list with squares of the even integers in nums.\n",
-        "    Keep original order. Ignore non-integers.\n",
-        "    \"\"\"\n",
-        "    # TODO: your code here\n",
-        "    result = []\n",
-        "    for x in nums:\n",
-        "        if isinstance(x, int) and x % 2 == 0:\n",
-        "            result.append(x * x)\n",
-        "    return result"
-      ],
-      "id": "student_fn"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "QylSVYgRyI4S"
-      },
-      "outputs": [],
-      "source": [
-        "# Tests. Read them to understand expected behavior.\n",
-        "def check_equal(got, expected, msg=''):\n",
-        "    if got == expected:\n",
-        "        print('PASS', msg)\n",
-        "    else:\n",
-        "        print('FAIL', msg)\n",
-        "        print('  got     :', got)\n",
-        "        print('  expected:', expected)\n",
-        "\n",
-        "check_equal(square_evens([1, 2, 3, 4]), [4, 16], 'basic')\n",
-        "check_equal(square_evens([0, 2.0, 5, -6]), [0, 36], 'ignore non-ints, handle negatives')\n",
-        "check_equal(square_evens([]), [], 'empty list')\n",
-        "check_equal(square_evens([7, 9, 11]), [], 'no evens')\n",
-        "check_equal(square_evens([10, 8, 6, 4, 2]), [100, 64, 36, 16, 4], 'order kept')"
-      ],
-      "id": "QylSVYgRyI4S"
+      "id": "tVRtBdZdxIw7"
     },
     {
       "cell_type": "markdown",
@@ -411,8 +213,7 @@
       "source": [
         "## Wrap up\n",
         "- You ran a setup block.\n",
-        "- You practiced core Python concepts.\n",
-        "- You completed two short exercises.\n",
+        "- You reviewed core Python concepts.\n",
         "\n",
         "If you got stuck, read the error trace from the bottom up. Use `print(...)` to inspect values. Use `help(name)` to check a function. Keep changes small and test often."
       ]
