--- a/pre-section/Section 0.ipynb
+++ b/pre-section/Section 0.ipynb
@@ -116,20 +116,26 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "id": "39525f70",
-      "metadata": {
-        "id": "39525f70"
-      },
+      "cell_type": "code",
       "source": [
-        "\n",
-        "\n",
-        "```\n",
-        "# This is formatted as code\n",
-        "```\n",
-        "\n",
-        "# Optional Basics. Useful if you're less familiar with Python!"
-      ]
+        "# TODO: your print function goes here"
+      ],
+      "metadata": {
+        "id": "aoOtnojF1OeG"
+      },
+      "id": "aoOtnojF1OeG",
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Optional Basics. Useful if you're less familiar with Python!\n"
+      ],
+      "metadata": {
+        "id": "vuSTfYVG1NEA"
+      },
+      "id": "vuSTfYVG1NEA"
     },
     {
       "cell_type": "markdown",
