--- a/pre-section/Section 0.ipynb
+++ b/pre-section/Section 0.ipynb
@@ -10,6 +10,8 @@
         "\n",
         "This goal of this notebook gets you comfortable running code in **Google Colab**, editing cells, and writing a few short functions in Python.\n",
         "\n",
+        "Before you start: Click File → Save a copy in Drive. This way you will not lose your progress if you want to refer back to this later!\n",
+        "\n",
         "**What you will do**\n",
         "1. Learn how to run and edit cells.\n",
         "2. Get your section password.\n",
@@ -52,7 +54,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "a769c3d0",
       "metadata": {
         "cellView": "form",
@@ -124,7 +126,7 @@
         "id": "aoOtnojF1OeG"
       },
       "id": "aoOtnojF1OeG",
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
