--- a/section-1/Section 1.ipynb
+++ b/section-1/Section 1.ipynb
@@ -354,9 +354,9 @@
       },
       "source": [
         "\n",
-        "# Part 2 · Vibe‑Coding Challenge (Policy)\n",
+        "# Part 2 · Vibe‑Coding Challenge\n",
         "\n",
-        "**Goal:** Use generative AI as your *primary coder/author* to rapidly prototype ideas around a policy topic.\n",
+        "**Goal:** Use generative AI as your *primary coder/author* to rapidly prototype ideas around a policy topic. I would reccomend using ChatGPT in a separate tab, though you also have Gemini access directly in this notebook (though I have found it to be buggy)\n",
         "\n",
         "**What to try**\n",
         "- Start simple (haiku/poem) and then move to summaries, debates, or an interactive issue chat.\n",
@@ -374,7 +374,7 @@
       },
       "source": [
         "\n",
-        "## 8) Policy‑themed haiku or poem (easy)\n",
+        "## Option 1: Policy‑themed haiku or poem (easy)\n",
         "Change the topic to something you care about.\n"
       ]
     },
@@ -388,7 +388,8 @@
       "outputs": [],
       "source": [
         "\n",
-        "_ = chat_once(\"Write a haiku about the challenges of urban housing policy.\")\n"
+        "_ = chat_once(\"Write a haiku about the challenges of urban housing policy.\")\n",
+        "reset_history()\n"
       ]
     },
     {
@@ -399,8 +400,8 @@
       },
       "source": [
         "\n",
-        "## 9) Policy summary bot (medium)\n",
-        "Paste a short excerpt (or a brief description) below. If the text is long, summarize the relevant parts first.\n"
+        "## Option 2: Policy summary bot (medium)\n",
+        "Paste a short excerpt (or a brief description) below of an article or policy memo of interest to you. If the text is long, summarize the relevant parts first.\n"
       ]
     },
     {
@@ -428,7 +429,9 @@
         "{policy_text}\n",
         "\"\"\"\n",
         "\n",
-        "_ = chat_once(prompt)\n"
+        "# Your turn! Implement an API request that sends both the policy text and the prompt to the model.\n",
+        "\n",
+        "# Hint: Section 3 of this notebook may be helpful\n"
       ]
     },
     {
@@ -439,8 +442,8 @@
       },
       "source": [
         "\n",
-        "## 10) Interactive “issue of interest” chat (hard)\n",
-        "Enter any policy issue; re-run as many times as you want.\n"
+        "## Option 3: “issue of interest” query (easy)\n",
+        "Prompt the user to input a policy area of interest, and send a request to the model asking for for a discussion of that area."
       ]
     },
     {
@@ -452,9 +455,13 @@
       },
       "outputs": [],
       "source": [
+        "SYSTEM_PROMPT = \"\" # Design the tone you want your bot to have when responding to the user's request\n",
         "\n",
-        "issue = input(\"Enter a policy issue of interest: \").strip()\n",
-        "_ = chat_once(f\"Discuss the policy implications of {issue} in a creative and engaging manner.\")\n"
+        "# To capture interactive user input, you can use the input() function\n",
+        "# For example: input(\"What is your policy area of interest? \")\n",
+        "\n",
+        "# Then, refer to Section 3 of this workbook for how to make your request.\n",
+        "# You should pass the user input policy area of interest, your system prompt, and any other prompt scaffolding you see fit.\n"
       ]
     },
     {
@@ -471,7 +478,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 32,
       "id": "2a92f3ee",
       "metadata": {
         "id": "2a92f3ee"
@@ -480,17 +487,60 @@
       "source": [
         "\n",
         "# Simple version\n",
-        "_ = chat_once(\"Provide one argument in favor of and one argument against universal basic income.\")\n",
         "\n",
-        "# Two-agent extension (sketch)\n",
+        "# Ask the LLM to weigh the pros and cons of a specific policy area of interest. Again, consult section 3 of this notebook for how to make this request"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Two Agent Extension\n",
+        "\n",
+        "Make two separate requests for each of these agents (these are system prompts). Change the system prompts as you see fit.\n",
+        "\n",
+        "#### Extensions:\n",
+        "\n",
+        "1. Have Agent B not only present their case but respond to Agent A. How might you do that?\n",
+        "2. Have the agents iteratively discuss things (use a `for` loop and feed the messages back and forth\n",
+        "3. Implement a debate moderator who looks at both messages and summarizes them.\n"
+      ],
+      "metadata": {
+        "id": "DR_e8qpJxC7C"
+      },
+      "id": "DR_e8qpJxC7C"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "# Two-agent extension\n",
+        "\n",
         "agent_a = \"You are a policy analyst focused on efficiency and growth.\"\n",
         "agent_b = \"You are a policy analyst focused on equity and distribution.\"\n",
         "\n",
-        "reset_history()\n",
-        "_ = chat_once(f\"As {agent_a} Give a short opening statement on universal basic income.\")\n",
-        "_ = chat_once(f\"As {agent_b} Respond with a short opening statement on universal basic income.\")\n",
-        "_ = chat_once(\"As a neutral moderator, summarize the strongest point from each side and note the main point of disagreement.\")\n"
-      ]
+        "# Make two separate requests for each of these agents.\n",
+        "\n",
+        "# Extensions:\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "F5rbMRaHuWiG"
+      },
+      "id": "F5rbMRaHuWiG",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Reflection\n",
+        "\n",
+        "Make note of any trouble you ran into while coding any of these tasks. What worked? What didnt work?"
+      ],
+      "metadata": {
+        "id": "6r0zXmbRxfxK"
+      },
+      "id": "6r0zXmbRxfxK"
     }
   ],
   "metadata": {
